# DelegatorAI

./: .gitignore  README.md  package-lock.json  package.json
.husky/: pre-commit
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: integrations.py  meetings.py  tasks.py  user.py  webhooks.py
apps/api/app/core/: config.py
apps/api/app/db/supabase/: client.py  supbaseJwks.py
apps/api/app/integrations/: __init__.py  base.py  manager.py  registry.py
apps/api/app/integrations/providers/: github_provider.py  slack_provider.py
apps/api/app/llm/: base.py  config.py  factory.py  litellm_provider.py
apps/api/app/models/: ApiResponse.py
apps/api/app/models/integrations/: schemas.py
apps/api/app/models/meetings/: BotEvents.py  GenerateSummaryRequest.py  JoinMeetingRequest.py
apps/api/app/models/tasks/: schemas.py
apps/api/app/services/: __init__.py  token_service.py
apps/api/app/services/email_service/: email_provider.py  factory.py  resend.py
apps/api/app/services/meeting_providers/: __init__.py  base.py  factory.py  meeting_baas.py
apps/api/app/services/meeting_service/: __init__.py  meeting_service.py  task_extraction_prompts.py  task_extraction_service.py  task_push_service.py  webhooks_service.py
apps/api/app/services/summary_service/: prompts.py  summary_service.py
apps/api/app/services/task_service/: prompts.py  task_service.py
apps/api/app/utils/: oauthToken.py  svix.py  transcript.py
(+86 files in other folders)
