[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "litellm>=1.81.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "resend>=2.23.0",
    "ruff>=0.15.2",
    "supabase>=2.28.0",
    "svix>=1.86.0",
    "uvicorn>=0.41.0",
]

[tool.setuptools.packages.find]
where = ["."]
